# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2005-05-22(Sun) 01:53:38 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadoka/ : mkdir

	* lib/ : mkdir

	* ndk_*.rb : move to nadoka/ and change require path

	* tagparts.rb, rss_check.rb : move to lib/ and change require path

	* ndk_manager.rb (NDK_Manager) : move to ndk/server.rb and rename NDK_Server

	* ndk_err.rb : move to ndk/error.rb


2005-03-15(Tue) 17:30:25 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : re-fix state management


2005-03-04(Fri) 16:28:18 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.4 released

	* ndk_version.rb : 0.6.5


2005-03-04(Fri) 13:23:37 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : fix server message pattern


2005-01-20(Thu) 23:15:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix typo


2004-12-20(Mon) 20:15:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : change unkown region error message
	and ignore region's case


2004-12-20(Mon) 20:04:53 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : strip region name


2004-12-20(Mon) 19:53:18 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/dict_bot.nb, plugins/pastebot.nb, plugins/weatherbot.nb
	added (test version)


2004-12-03(Fri) 14:45:19 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : fix again (patched by U.Nakamura)


2004-12-03(Fri) 13:59:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : fix bug about mode change by server

	* plugins/modemanager.rb : fix bug to detect mode


2004-11-24(Wed) 13:20:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autodump.nb : fix bug	(apply patch from shugo)


2004-08-25(Wed) 15:00:49 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix bug(add ',')


2004-08-20(Fri) 18:48:36 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix googlec prompt


2004-08-19(Thu) 01:17:13 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : add '#nadoka' channel setting

