@@ -2,6 +2,11 @@
 # $Id$ 
 #
 
+2005-05-22(Sun) 23:28:53 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* ndk/logger.rb : support directory auto generation
+
+
 2005-05-22(Sun) 01:53:38 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* nadoka/ : mkdir
